; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_d3dtex_get_render_texture.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_direct3d.c_d3dtex_get_render_texture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.d3dtex = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, %struct.d3dtex*)* @d3dtex_get_render_texture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @d3dtex_get_render_texture(i32* %0, %struct.d3dtex* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.d3dtex*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.d3dtex* %1, %struct.d3dtex** %4, align 8
  %5 = load %struct.d3dtex*, %struct.d3dtex** %4, align 8
  %6 = getelementptr inbounds %struct.d3dtex, %struct.d3dtex* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load %struct.d3dtex*, %struct.d3dtex** %4, align 8
  %11 = getelementptr inbounds %struct.d3dtex, %struct.d3dtex* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load %struct.d3dtex*, %struct.d3dtex** %4, align 8
  %15 = getelementptr inbounds %struct.d3dtex, %struct.d3dtex* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi i64 [ %12, %9 ], [ %16, %13 ]
  %19 = inttoptr i64 %18 to i32*
  ret i32* %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
